--- a/ui/bar/bar.html
+++ b/ui/bar/bar.html
@@ -15,7 +15,7 @@
 
 .barright { float:right; width:40px;  }
 
-.button {margin:1px;}
+
 
 </style>
 
@@ -25,11 +25,11 @@
 <div class="bar">
 	<div class="barleft">.::标题</div>
 	<div class="barright" align="right">
-		<span class="button" onclick="alert('最小化')">-</span>
-		<span class="button" onclick="alert('最大化')">+</span>
-		<span class="button" onclick="alert('关闭')">X</span>
+		<span style="margin:1px;" onclick="alert('最小化')">-</span>
+		<span style="margin:1px;" onclick="alert('最大化')">+</span>
+		<span style="margin:1px;" onclick="alert('关闭')">X</span>
 	</div>
-  <div class="barcenter">..........</div> 
+  <div class="barcenter">..</div> 
 </div>
 </body>
 </html>
