--- a/ui/hilight/lilight.html
+++ b/ui/hilight/lilight.html
@@ -2,26 +2,51 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>Insert title here</title>
+<title>行变色</title>
 <style type="text/css">
 body {
 	font-family: 'Verdana', '宋体';
 	font-size: 12PX;
 }
 </style>
-<script type="text/javascript" src="../jquery.min.js"></script>
-<script type="text/javascript" src="../src/jquery.slider.js"></script>
+<script type="text/javascript" src="../jquery-1.5.1.js"></script>
+<script type="text/javascript" src="../src/jquery.hilight.js"></script>
 </head>
 <body>
-	<div class="hilight{background:'red',foreground:'white'}">
-		Have a nice day!</div>
-	<div class="hilight{foreground:'orange'}">Have a nice day!</div>
-	<div class="hilight{background:'green'}">Have a nice day!</div>
+	<table id="newTable">
+		<tr style="color: "#33CC00"">
+			<td>1</td>
+			<td>1</td>
+			<td>1</td>
+		</tr>
+		<tr style="color: "#33CC00"">
+			<td>1</td>
+			<td>1</td>
+			<td>1</td>
+		</tr>
+		<tr style="color: "#33CC00"">
+			<td>1</td>
+			<td>1</td>
+			<td>1</td>
+		</tr>
+		<tr style="color: "#33CC00"">
+			<td>1</td>
+			<td>1</td>
+			<td>1</td>
+		</tr>
+		<tr style="color: "#33CC00"">
+			<td>1</td>
+			<td>1</td>
+			<td>1</td>
+		</tr>
+	</table>
 </body>
 
 
 <script type="text/javascript">
-
+	$(document).ready(function() {
+		$("#newTable").setTableUI();
+	});
 </script>
 
 </html>
