--- a/golf/trunk/WebRoot/file/upload.html
+++ b/golf/trunk/WebRoot/file/upload.html
@@ -5,7 +5,7 @@
 <title>upload.html</title>
 </head>
 <body>
-<form name="form1"  method="post" enctype="multipart/form-data" action="upload.jsp"><p>
+<form name="form1"  method="post" enctype="multipart/form-data" action="/golf/version/upload"><p>
   <input name="file1" type="file"></p>
   <p>
   <input name="file2" type="file"></p>
