--- a/golf/trunk/WebRoot/file/upload.html
+++ b/golf/trunk/WebRoot/file/upload.html
@@ -10,7 +10,9 @@
   <p>
   <input name="file2" type="file"></p>
   <p>
-  <input name="file3" type="file"></p><p><input type="text" name="text"></p>
+  <input name="file3" type="file"></p>
+  <p>
+  <input type="text" name="text"></p>
   <p><input type="submit" name="Submit" value="上传"></p>
 </form >
 </body>
