--- a/golf/trunk/WebRoot/file/upload.html
+++ b/golf/trunk/WebRoot/file/upload.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+<base href="http://www.w3school.com.cn/i/" />
+<base target="_blank" />
 <meta charset="UTF-8">
 <title>upload.html</title>
 </head>
